mpegtsmux: fix creation of ADTS header for AAC audio in MPEG-TS

https://bugzilla.gnome.org/show_bug.cgi?id=695412